--- a/src/components/NavBarBox.css
+++ b/src/components/NavBarBox.css
@@ -123,8 +123,10 @@
         width: 50%;
         height: 100%;
     }
-    .iconWeatherBox img{
-        padding: 0;
-        margin: 0;
-        width: 100%;
+    .iconCustom{
+        display: flex;
+        height: 70%;
+        width: 70%;
+        color: rgb(252, 252, 253);
+        border-radius: 3rem;
     }
